# oc-gamma

./: .env.example  .gitignore  AGENTS.md  opencode.json
.opencode/agent/: code-implementer.md  code-reviewer.md  documentation-agent.md  planning-agent.md  security-reviewer.md
.serena/: project.yml
.serena/memories/: suggested_commands.md  task_completion_checklist.md
.serena/memories/project/: overview.md
docs/: color-system.md
docs/api/: README.md  theme.md
docs/guides/: authentication.md  theme-development.md  theme-switching.md
rules/: backend_arch_design.md  deployment.md  development_testing.md  frontend_arch_design.md  full_stack_feature_lifecycle.yaml  security.md
src/backend/: __init__.py  alembic.ini  dev.ps1  dev.sh  main.py  pyproject.toml  run.py
src/backend/alembic/: env.py
src/backend/alembic/versions/: 001_add_theme_preference.py
src/backend/api/: __init__.py  deps.py
src/backend/api/v1/: __init__.py  auth.py
src/backend/core/: config.py  database.py  logging.py  migrations.py  security.py  version.py
src/backend/models/: __init__.py  base.py  user.py
src/backend/repositories/: __init__.py  base.py  user.py
src/backend/schemas/: __init__.py  auth.py  user.py
src/backend/services/: __init__.py  auth_service.py
src/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
tests/backend/: conftest.py  test_auth_api.py  test_auth_service.py  test_database.py  test_security.py  test_theme.py  test_user_repo.py
tests/frontend/: ThemeToggle.test.tsx
(+66 files in other folders)
